fix solarized path

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = ./vim-json/
 [submodule "vim-colors-solarized"]
 	path = vim-colors-solarized
-	url = ./vim-colors-solarized/
+	url = git://github.com/altercation/vim-colors-solarized.git
