--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "jellybeans.vim"]
 	path = jellybeans.vim
 	url = git://github.com/nanotech/jellybeans.vim.git
+[submodule "vim-pad"]
+	path = vim-pad
+	url = git://github.com/fmoralesc/vim-pad.git
