--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "zencoding-vim"]
 	path = zencoding-vim
 	url = http://github.com/mattn/zencoding-vim.git
+[submodule "vim-smartinput"]
+	path = vim-smartinput
+	url = https://github.com/kana/vim-smartinput.git
