--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule "vim-smartinput"]
 	path = vim-smartinput
 	url = https://github.com/kana/vim-smartinput.git
+[submodule "RelOps"]
+	path = RelOps
+	url = https://github.com/vim-scripts/RelOps.git
+[submodule "ack.vim"]
+	path = ack.vim
+	url = https://github.com/mileszs/ack.vim.git
