--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,9 @@
 [submodule "ultisnips"]
 	path = ultisnips
 	url = https://github.com/SirVer/ultisnips.git
+[submodule "vimroom"]
+	path = vimroom
+	url = https://github.com/mikewest/vimroom.git
+[submodule "glsl.vim"]
+	path = glsl.vim
+	url = https://github.com/Nemo157/glsl.vim.git
