--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git://github.com/vim-scripts/Gist.vim.git
 [submodule "vim-powerline"]
 	path = vim-powerline
-	url = git://github.com/Lokaltog/vim-powerline.git
+	url = https://github.com/Lokaltog/vim-powerline.git
 [submodule "vim-surround"]
 	path = vim-surround
 	url = git://github.com/tpope/vim-surround.git
@@ -67,3 +67,33 @@
 [submodule "glsl.vim"]
 	path = glsl.vim
 	url = https://github.com/Nemo157/glsl.vim.git
+[submodule "molokai"]
+	path = molokai
+	url = https://github.com/tomasr/molokai.git
+[submodule "YouCompleteMe"]
+	path = YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule "vim-gitgutter"]
+	path = vim-gitgutter
+	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "focus.vim"]
+	path = focus.vim
+	url = https://github.com/merlinrebrovic/focus.vim.git
+[submodule "csapprox"]
+	path = csapprox
+	url = https://github.com/godlygeek/csapprox.git
+[submodule "crunch"]
+	path = crunch
+	url = https://github.com/arecarn/crunch.git
+[submodule "vim-startify"]
+	path = vim-startify
+	url = https://github.com/mhinz/vim-startify.git
+[submodule "vim-css-color"]
+	path = vim-css-color
+	url = https://github.com/skammer/vim-css-color.git
+[submodule "vim-mustang"]
+	path = vim-mustang
+	url = https://github.com/marcus/vim-mustang.git
+[submodule "vim-argumentative"]
+	path = vim-argumentative
+	url = https://github.com/PeterRincker/vim-argumentative.git
